--- a/node/api/package.json
+++ b/node/api/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
