move entities, created user repo

--- a/node/api/ormconfig.json
+++ b/node/api/ormconfig.json
@@ -9,11 +9,11 @@
   "schema": "public",
   "synchronize": false,
   "logging": true,
-  "entities": ["src/database/entities/**/*.ts"],
+  "entities": ["src/entities/**/*.ts"],
   "migrations": ["src/database/migrations/**/*.ts"],
   "subscribers": ["src/database/subscribers/**/*.ts"],
   "cli": {
-    "entitiesDir": "/src/database/entities",
+    "entitiesDir": "/src/entities",
     "migrationsDir": "src/database/migrations",
     "subscribersDir": "src/database/subscribers"
   }
