--- a/node/api/package.json
+++ b/node/api/package.json
@@ -32,8 +32,8 @@
     "typescript": "^4.1.5"
   },
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "SET NODE_ENV=dev && ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "SET NODE_ENV=test && jest"
   }
 }
