--- a/node/api/package.json
+++ b/node/api/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.1",
@@ -34,6 +35,7 @@
   "scripts": {
     "dev": "SET NODE_ENV=dev && ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "SET NODE_ENV=test && jest"
+    "test": "SET NODE_ENV=test && jest",
+    "posttest": "rm ./src/database/database.sqlite"
   }
 }
