--- a/node/api/ormconfig.json
+++ b/node/api/ormconfig.json
@@ -27,11 +27,9 @@
     "logging": true,
     "entities": ["src/entities/**/*.ts"],
     "migrations": ["src/database/migrations/**/*.ts"],
-    "subscribers": ["src/database/subscribers/**/*.ts"],
     "cli": {
       "entitiesDir": "src/entities",
-      "migrationsDir": "src/database/migrations",
-      "subscribersDir": "src/database/subscribers"
+      "migrationsDir": "src/database/migrations"
     }
   }
 ]
