--- a/node/api/package.json
+++ b/node/api/package.json
@@ -8,6 +8,10 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.4.18",
+    "yup": "^0.32.9",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
@@ -15,6 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/nodemailer": "^6.4.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/supertest": "^2.0.10",
