--- a/node/api/package.json
+++ b/node/api/package.json
@@ -11,17 +11,17 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.4.18",
-    "yup": "^0.32.9",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/nodemailer": "^6.4.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
